# bench0r

./: AGENT_GUIDE.md  ARCHITECTURE.md  BACKLOG.md  CANVAS_BEHAVIOR.md  DATABASE_SCHEMA.md  DOMAIN_MODEL.md  MANIFEST.md  MVP.md  RUN_PROMPT.md  TASKS.md  UI_SCREENS.md
backend/: .env.example  Cargo.toml
backend/migrations/: 001_create_workspaces.sql  002_create_nodes.sql  003_create_node_properties.sql  004_create_edges.sql
backend/src/: error.rs  main.rs
backend/src/db/: mod.rs
backend/src/models/: edge.rs  mod.rs  node.rs  node_property.rs  workspace.rs
backend/src/routes/: health.rs  mod.rs  nodes.rs  workspaces.rs
backend/src/schemas/: edge.rs  mod.rs  node.rs  workspace.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/nodes/: AgentNode.tsx  DataSourceNode.tsx  RuleNode.tsx  ToolNode.tsx  index.ts
frontend/src/components/panels/: NodeDetailPanel.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: WorkspaceCanvasPage.tsx  WorkspaceListPage.tsx
frontend/src/types/: edge.ts  node.ts  workspace.ts
